# templates

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
C/: .clang-format  install.sh
C++/: .clang-format  CMakeLists.txt
C++/examples/hello_world/: main.cpp
C++/src/: hellow_world.cpp
C++/test/: main.cpp
C/src/: hellow_world.c
examples/hello_world/: main.c
test/: main.c
